@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.491 2005/11/22 04:24:06 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.492 2005/11/22 16:09:34 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   21 Nov 2005; Preston Cody <codeman@gentoo.org>
   initial adding of boot_device to backend.
   initial boot_device support added to gli-dialog.
+	some fixes of my poor coding
 	
   20 Nov 2005; Preston Cody <codeman@gentoo.org>
   converted gli-dialog to use the install_package_list.
